<resources>
    <string name="app_name">Notepad</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Tiêu đề...</string>
    <string name="node_subtitle">Phụ đề...</string>
    <string name="type_note_here">Nội dung...</string>
    <string name="miscellaneous">Màu nền</string>
    <string name="ch_n_m_u">Chọn màu</string>
    <string name="delete_note">Xoá</string>
    <string name="b_n_c_ch_c_ch_n_mu_n_xo_note_n_y">Bạn có chắc chắn muốn xoá Note này ?</string>
    <string name="cancel">Thoát</string>
    <string name="th_m_nh">Thêm Ảnh</string>
    <string name="nh">Thêm Ảnh</string>
    <string name="xo">Xoá</string>
</resources>