<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/createNote"
    tools:context=".CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
<!--            <ImageView-->
<!--                android:id="@+id/imageBack"-->
<!--                android:layout_width="@dimen/_30sdp"-->
<!--                android:layout_height="@dimen/_30sdp"-->
<!--                android:layout_marginStart="@dimen/_6sdp"-->
<!--                android:layout_marginTop="@dimen/_20sdp"-->
<!--                android:layout_marginEnd="@dimen/_12sdp"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:src="@drawable/ic_back"-->
<!--                app:tint="@color/colorIcons"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                />-->

<!--            <ImageView-->
<!--                android:id="@+id/imageSave"-->
<!--                android:layout_width="@dimen/_30sdp"-->
<!--                android:layout_height="@dimen/_30sdp"-->
<!--                android:layout_marginEnd="@dimen/_12sdp"-->

<!--                android:background="@drawable/background_done_button"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:padding="@dimen/_4sdp"-->
<!--                android:src="@drawable/ic_done"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/imageBack"-->

<!--                app:layout_constraintEnd_toStartOf="@id/imageDelete"-->
<!--                app:layout_constraintTop_toTopOf="@id/imageBack"-->
<!--                app:layout_constraintVertical_bias="1.0"-->
<!--                app:tint="@color/colorIcons" />-->

<!--            <ImageView-->
<!--                android:id="@+id/imageDelete"-->
<!--                android:layout_width="@dimen/_30sdp"-->
<!--                android:layout_height="@dimen/_30sdp"-->

<!--                android:layout_marginEnd="@dimen/_12sdp"-->

<!--                android:src="@drawable/ic_delete"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/imageSave"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/imageSave"-->

<!--                app:tint="@color/colorIconDelete"-->
<!--                android:visibility="visible"-->
<!--                />-->

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                />
            <EditText
                android:id="@+id/inputNoteSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/node_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                />
            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"

                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubTitle"/>
            <View
                android:id="@+id/linePrevent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubTitle"
                android:background="@color/linePrevent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                />


            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"

                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"


                app:layout_constraintTop_toBottomOf="@id/linePrevent"
                />
            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNote"
                />
            <ImageView
                android:id="@+id/deleteImage"
                android:src="@drawable/ic_delete_image"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/inputNote"

                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>